Actions
Bug #12013
closedfix smatch build for GCC4
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
We need to fix up smatch properly to compile with GCC$ again.
Updated by John Levon over 2 years ago
- Subject changed from fix GCC4 as primary compiler to fix smatch build for GCC4
We'll also take the opportunity to add an elxms function that was causing "too hairy" errors occassionally.
Updated by Electric Monk over 2 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit eb44bcc7bc940d7cc1f4c10afa5a1cb7ec0dd198
commit eb44bcc7bc940d7cc1f4c10afa5a1cb7ec0dd198 Author: John Levon <john.levon@joyent.com> Date: 2019-11-25T15:25:09.000Z 12013 fix smatch build for GCC4 Reviewed by: Dan McDonald <danmcd@joyent.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions